feat：完成了师兄交代的那些，重构了代码
